...
            tools:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Navigation Host Fragment for managing app navigation -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="yes"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
...
